--- a/tetris.html
+++ b/tetris.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tetris Demo</title>
     <!--<link rel="stylesheet" href="tetris.css">-->
-    <script src="js/lib/require.js"></script>
+    <script src="js/tetris.js"></script>
 </head>
 <body>
     <canvas class="tetris" width="300" height="600"></canvas>
