--- a/tests.html
+++ b/tests.html
@@ -3,34 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Tetris Tests</title>
-    <!--<link rel="stylesheet" href="tetris.css">-->
-
-    <script src="../js/lib/require.js"></script>
-    <script>
-        require.config({
-            baseUrl: "../js",
-            paths: {
-                jquery: 'lib/jquery-1.10.2',
-                underscore: 'lib/underscore-1.5.2'
-            },
-            urlArgs: "bust=" + (new Date()).getTime(),
-            shim: {
-                'underscore': {
-                    exports: '_'
-                }
-            }
-        });
-
-        require(['juniper/bootstrap', 'juniper/display', 'tests/config'],
-            function(bootstrap, display, config) {
-                bootstrap.init(config);
-                display.init();
-                bootstrap.onLoad(function() {
-                    bootstrap.run();
-                });
-            }
-        );
-    </script>
+    <script src="js/tests.js"></script>
+    
     <style type="text/css">
         body {
             background: #333;
