--- a/tetris.html
+++ b/tetris.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Tetris Demo</title>
-    <!--<link rel="stylesheet" href="tetris.css">-->
+    <style type="text/css">
+    	body: {
+    		background: #ccc;
+    		margin: 40px;
+    	}
+    </style>
     <script src="js/tetris.min.js"></script>
 </head>
 <body>
