--- a/tetris.html
+++ b/tetris.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <canvas class="tetris" width="300" height="660"></canvas>
+    <canvas class="tetris" width="300" height="660" tabindex="1"></canvas>
     <script src="js/tetris.min.js"></script>
     <script>
         var el = document.getElementsByClassName('tetris'),
