--- a/tetris.html
+++ b/tetris.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tetris Demo</title>
     <style type="text/css">
-    	body: {
+    	body {
     		background: #ccc;
     		margin: 40px;
     	}
@@ -12,7 +12,7 @@
 </head>
 <body>
     <canvas class="tetris" width="300" height="660" tabindex="1"></canvas>
-    <script src="js/tetris.min.js"></script>
+    <script src="dist/tetris.min.js"></script>
     <script>
         var el = document.getElementsByClassName('tetris'),
             i,
